clusters/openshift/apps/utility/it-tools/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools-route
  namespace: it-tools
  labels:
    external-dns: 'true'
  annotations:
    external-dns.alpha.kubernetes.io/target: apps.sno-ai-lab.vanillax.xyz
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
    sectionName: https
  hostnames:
  - it-tools.apps.sno-ai-lab.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: it-tools
      port: 8080
      weight: 1
